--- a/thanh menu.css
+++ b/thanh menu.css
@@ -13,14 +13,16 @@
 .main-item {
   display: inline-block;
   margin-right: 20px;
+  position: relative; /* Đặt vị trí cho menu con */
 }
 
 .sub-menu {
   display: none;
   position: absolute;
+  top: 100%; /* Hiển thị menu con ngay dưới mục chính */
+  left: 0;
   background-color: #333;
   padding: 10px;
-  width: 200px; /* Độ rộng của khung bảng */
 }
 
 .sub-menu a {
@@ -32,4 +34,8 @@
 
 .sub-menu a:hover {
   background-color: #555;
+}
+
+.main-item:hover .sub-menu {
+  display: block; /* Hiển thị menu con khi di chuột qua mục chính */
 }
